--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -14,6 +14,7 @@
         --popover-foreground: 222.2 84% 4.9%;
 
         --primary: 222.2 47.4% 11.2%;
+        --loader: rgb(245 158 11 / 1) !important;
         --primary-foreground: 210 40% 98%;
 
         --secondary: 210 40% 96.1%;
@@ -39,6 +40,7 @@
         --background: 222.2 84% 4.9%;
         --foreground: 210 40% 98%;
 
+        --loader: rgb(245 158 11 / 100%) !important;
         --card: 222.2 84% 4.9%;
         --card-foreground: 210 40% 98%;
 
