feat(web): Further developing user theming
Developing application theming ...

--- a/apps/web/public/themes/nighthawk.css
+++ b/apps/web/public/themes/nighthawk.css
@@ -1,4 +1,4 @@
-.theme-1 {
+.nighthawk {
     --background: 223.6 29.2% 22.2% !important;
     --accent: 184 100% 27% !important;
     --main: 195 50% 91% !important;
