--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,7 +1,9 @@
-@import "../public/themes/theme1.css";
+@import "../public/themes/nighthawk.css";
 @import "../public/themes/theme2.css";
 @import "../public/themes/theme3.css";
 @import "../public/themes/theme4.css";
+@import "../public/themes/frost.css";
+@import "../public/themes/dark.css";
 
 @tailwind base;
 @tailwind components;
