feat(web): Adding Local storage saving of configuration
Adding Local storage saving of configuration for anonymous users ...

--- a/apps/web/public/themes/obsidian.css
+++ b/apps/web/public/themes/obsidian.css
@@ -1,4 +1,4 @@
-.theme-2 {
+.obsidian {
     --background: 30 5% 15% !important;
     --accent: 22 100% 51% !important;
     --main: 353 100% 38% !important;
