--- a/apps/web/public/themes/slate.css
+++ b/apps/web/public/themes/slate.css
@@ -1,4 +1,4 @@
-.theme-4 {
+.slate {
     --background: 220, 3%, 19% !important;
     --accent: 56, 73%, 74% !important;
     --main: 51 32% 54% !important;
