--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -83,7 +83,7 @@
     }
 
     body {
-        @apply bg-background text-foreground;
+        @apply bg-background text-foreground scrollbar-thumb-accent scrollbar-track-red-500;
     }
 }
 
