--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -43,6 +43,11 @@
         --ring: 222.2 84% 4.9%;
 
         --radius: 0.5rem;
+        --chart-1: 173 58% 39%;
+        --chart-2: 12 76% 61%;
+        --chart-3: 197 37% 24%;
+        --chart-4: 43 74% 66%;
+        --chart-5: 27 87% 67%;
     }
 
     .dark {
